Made slider manual, added overflow:hidden to fix scrollbar issue

--- a/css/flexslider.css
+++ b/css/flexslider.css
@@ -21,7 +21,7 @@
 
 /* FlexSlider Necessary Styles
 *********************************/ 
-.flexslider {margin: 0; padding: 0;}
+.flexslider {margin: 0; padding: 0; overflow: hidden;}
 .flexslider .slides > li {display: none; -webkit-backface-visibility: hidden;} /* Hide the slides before the JS is loaded. Avoids image jumping */
 .flexslider .slides img {display: block;}
 .flex-pauseplay span {text-transform: capitalize;}
